--- a/README.org
+++ b/README.org
@@ -1,6 +1,8 @@
 # LeetCode
 LeetCode
 
-| 编号 | 题目                         | 算法 | 数据结构 | 备注 |
-|------+------------------------------+------+----------+------|
-|  237 | Delete Node in a Linked List | N/A  | N/A      |      |
+| 编号 | 题目                         | tags        | 备注 |
+|------+------------------------------+-------------+------|
+|  237 | Delete Node in a Linked List | Linked List |      |
+
+
