--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 # LeetCode
 LeetCode
 
-| 编号 | 题目                         | tags        | 备注 |
-|------+------------------------------+-------------+------|
-|  237 | Delete Node in a Linked List | Linked List |      |
-|  103 | Maximum Depth of Binary Tree | Tree, DFS   |      |
+| 编号 | 题目                         | 难度 | 标签        | 备注 |
+|------+------------------------------+------+-------------+------|
+|  237 | Delete Node in a Linked List | Easy | Linked List |      |
+|  103 | Maximum Depth of Binary Tree | Easy | Tree, DFS   |      |
 
 
