--- a/README.org
+++ b/README.org
@@ -1,9 +1,11 @@
 # LeetCode
 LeetCode
 
-| 编号 | 题目                         | 难度 | 标签        | 备注     |
-|------+------------------------------+------+-------------+----------|
-|  237 | Delete Node in a Linked List | Easy | Linked List | new idea |
-|  103 | Maximum Depth of Binary Tree | Easy | Tree, DFS   |          |
+| 编号 | 题目                         | 难度   | 标签                         | 备注 |
+|------+------------------------------+--------+------------------------------+------|
+|  100 | Same Tree                    | Easy   | Tree, DFS                    |      |
+|  104 | Maximum Depth of Binary Tree | Easy   | Tree, DFS                    |      |
+|  136 | Single Number                | Medium | Hash Tabele, BitManlpulation |      |
+|  237 | Delete Node in a Linked List | Easy   | Linked List                  |      |
 
 
