--- a/README.org
+++ b/README.org
@@ -7,8 +7,11 @@ LeetCode
 |  104 | Maximum Depth of Binary Tree                   | Easy   | Tree, DFS                    |      |
 |  122 | Best Time to Buy and Sell Stock II             | Easy   | Array, Greedy                |      |
 |  136 | Single Number                                  | Medium | Hash Tabele, BitManlpulation |      |
+|  141 | Linked List Cycle                              | Medium | Linked List, Two Pointers    |      |
+|  144 | Binary Tree Preorder Traversal                 | Medium | Tree, Stack                  |      |
 |  235 | Lowest Common Ancestor of a Binary Search Tree | Easy   | Tree                         |      |
 |  237 | Delete Node in a Linked List                   | Easy   | Linked List                  |      |
+
 
 
 
