--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@
 |   94 | Binary Tree Inorder Traversal                  | Medium | Tree, Hash Table, Stack      |      |
 |  100 | Same Tree                                      | Easy   | Tree, DFS                    |      |
 |  104 | Maximum Depth of Binary Tree                   | Easy   | Tree, DFS                    |      |
+|  116 | Populating Next Right Pointers in Each Node    | Medium | Tree, DFS                    |      |
 |  122 | Best Time to Buy and Sell Stock II             | Easy   | Array, Greedy                |      |
 |  136 | Single Number                                  | Medium | Hash Tabele, BitManlpulation |      |
 |  141 | Linked List Cycle                              | Medium | Linked List, Two Pointers    |      |
@@ -12,5 +13,6 @@
 |  145 | Binary Tree Postorder Traversal                | Hard   | Tree, Stack                  |      |
 |  171 | Excel Sheet Column Number                      | Easy   | Math                         |      |
 |  191 | Number of 1 Bits                               | Easy   | Bit Manipulation             |      |
+|  226 | Invert Binary Tree                             | Easy   | Tree                         |      |
 |  235 | Lowest Common Ancestor of a Binary Search Tree | Easy   | Tree                         |      |
 |  237 | Delete Node in a Linked List                   | Easy   | Linked List                  |      |
