--- a/README.org
+++ b/README.org
@@ -2,15 +2,29 @@
 
 | 编号 | 题目                                           | 难度   | 标签                                        | 备注 |
 |------+------------------------------------------------+--------+---------------------------------------------+------|
+|    1 | Two Sum                                        | Medium | Array, Hash Table                           |      |
+|    2 | Add Two Numbers                                | Medium | Linked List, Math                           |      |
+|    3 | Longest Substring Without Repeating Characters | Medium | Hash Table, Two Pointers, String            |      |
+|    5 | Longest Palindromic Substring                  | Medium | String                                      |      |
+|   21 | Merge Two Sorted Lists                         | Easy   | Linked List                                 |      |
+|   26 | Remove Duplicates from Sorted Array            | Easy   | Array, Two Pointers                         |      |
+|   27 | Remove Element                                 | Easy   | Array, Two Pointers                         |      |
+|   66 | Plus One                                       | Easy   | Array, Math                                 |      |
+|   70 | Climbing Stairs                                | Easy   | Dynamic Programming                         |      |
+|   83 | Remove Duplicates from Sorted List             | Easy   | Linked List                                 |      |
 |   94 | Binary Tree Inorder Traversal                  | Medium | Tree, Hash Table, Stack                     |      |
 |  100 | Same Tree                                      | Easy   | Tree, DFS                                   |      |
+|  101 | Symmetric Tree                                 | Easy   | Tree, DFS                                   |      |
 |  104 | Maximum Depth of Binary Tree                   | Easy   | Tree, DFS                                   |      |
+|  110 | Balanced Binary Tree                           | Easy   | Tree, BFS                                   |      |
 |  116 | Populating Next Right Pointers in Each Node    | Medium | Tree, DFS                                   |      |
+|  118 | Pascal's Triangle                              | Easy   | Array                                       |      |
 |  122 | Best Time to Buy and Sell Stock II             | Easy   | Array, Greedy                               |      |
 |  136 | Single Number                                  | Medium | Hash Tabele, BitManlpulation                |      |
 |  141 | Linked List Cycle                              | Medium | Linked List, Two Pointers                   |      |
 |  144 | Binary Tree Preorder Traversal                 | Medium | Tree, Stack                                 |      |
 |  145 | Binary Tree Postorder Traversal                | Hard   | Tree, Stack                                 |      |
+|  169 | Majority Element                               | Easy   | Divide and Conquer, Array, Bit Manipulation |      |
 |  171 | Excel Sheet Column Number                      | Easy   | Math                                        |      |
 |  191 | Number of 1 Bits                               | Easy   | Bit Manipulation                            |      |
 |  217 | Contains Duplicate                             | Easy   | Array, Hash Table                           |      |
@@ -18,7 +32,3 @@
 |  226 | Invert Binary Tree                             | Easy   | Tree                                        |      |
 |  235 | Lowest Common Ancestor of a Binary Search Tree | Easy   | Tree                                        |      |
 |  237 | Delete Node in a Linked List                   | Easy   | Linked List                                 |      |
-|  169 | Majority Element                               | Easy   | Divide and Conquer, Array, Bit Manipulation |      |
-|   70 | Climbing Stairs                                | Easy   | Dynamic Programming                         |      |
-|   83 | Remove Duplicates from Sorted List             | Easy   | Linked List                                 |      |
-|      |                                                |        |                                             |      |
