--- a/README.org
+++ b/README.org
@@ -57,3 +57,4 @@
 |  226 | Invert Binary Tree                             | Easy   | Tree                                        |      |
 |  235 | Lowest Common Ancestor of a Binary Search Tree | Easy   | Tree                                        |      |
 |  237 | Delete Node in a Linked List                   | Easy   | Linked List                                 |      |
+|  242 | Valid Anagram                                  | Easy   | Hash Table, Sort                            |      |
